# BCoTP

./: LICENSE  Makefile  README.md  bcotp.opam  compile.php  dune-project  game.ml  main.ml  makefile  resources.ml  ui.ml
.github/: FUNDING.yml
.github/workflows/: workflow.yml
.local/: biomes.ase  coalplant.ase  convert_image.py  farm.ase  image.html  ohno.ase  ohyes.ase  planet.ase  rocket.ase  splash.ase  well.ase
lib/: aliases.ml  dune  game.ml  resources.ml  userinterface.ml
test/: bcotp.ml  dune
