(lang dune 2.7)

(name bcotp)

(license MIT)

(authors "Gautier Ben A\195\175m <https://github.com/GauBen/>")

(maintainers "Gautier Ben A\195\175m <https://github.com/GauBen/>")

(source
 (uri "git+https://github.com/GauBen/bcotp.git"))

(bug_reports "https://github.com/GauBen/bcotp/issues")

(homepage "https://github.com/GauBen/bcotp")

(documentation "https://github.com/GauBen/bcotp")

(package
 (name bcotp)
 (synopsis "Big Cities on Tiny Planets : Definitive Edition")
 (description "The locally world-famous city building game")
 (depends graphics unix))

(generate_opam_files true)
